# finnhub_data_extraction

./: README.md  pyproject.toml  sample.py
src/consumers/: finnhub_consumer.py
src/core/: config.py  config.yml  logger.py
src/kafka_docker/: zk-single-kafka-multiple.yml
src/producers/: finnhub_producer.py  finnhub_trade.py  real_time_trade.py  real_time_trade_producer.py  tickers.yml
src/streamConsumer/: app.py  data_format.json  docker-compose.yml
